19.41.