@@ -1023,7 +1023,7 @@ public class CommunityCardsPanel extends javax.swing.JPanel implements ZoomableI
 
         if (notifier != null) {
 
-            notifier.add(Thread.currentThread().getId());
+            notifier.add(Thread.currentThread().threadId());
 
             synchronized (notifier) {
 
